--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 max-line-length = 99
 # ignore E731
 # E731: do not assign a lambda expression, use a def
-ignore = E731, W503
+ignore = E731, W503, E741
